* October 11 2005, Arno Klenke *

Fixed a special case in the focus handling code of the appserver

* October 8 2005, Kristian Van Der Vliet *

Improve drive probing in the ATA driver and always use ATAPI block
size of 2048

* October 8 2005, Kristian Van Der Vliet *

The appserver Window & Application loops use get_msg_size() to handle
over-sized packets.

* October 5 2005, Arno Klenke

Updated makefiles of the input and display drivers

* October 4 2005, Arno Klenke

Updated appserver:
	o Code cleanups and display driver api updates
	o Removed 15bit code
	o Parts of the keyboard code moved into an input plugin
	o Backbuffered rendering supported in the intel, sis and geforce driver
	o New hardware support: SiS 761, XGI Volari and nVidia GeForce 7800

* September 17 2005, Henrik Isaksson *

Checked in Paul Dufresne's French Canadian keymap.

* September 7 2005, Arno Klenke *

Updated geforce driver

* September 2 2005, Kristian Van Der Vliet *

Checked in all the init script, environment & Users management changes.  There
are two new preferences applications, "Login" & "Users & Groups".

* September 2 2005, Kristian Van Der Vliet *

It was brought to my attention that the code_alt.ttf font which was being shipped
with Syllable was a commercial shareware font that should not be redistributed.
The font has been removed from Syllable.

* September 2 2005, Kristian Van Der Vliet *

Small patch to the ATA driver so it uses a counting semaphore instead of a counter
and a loop that snooze()s while it wait.  This should reduce CPU usage and reduce
latency for commands.

---- 0.5.7 Released -------------------------------------------------------------------

* August 19 2005, Arno Klenke *

Changed linker flags in the decorator makefiles to fix freezes

* August 15 2005, Kristian Van Der Vliet *

New Savage driver that supports all S3 Savage chipsets (Although not the mis-named
Via Unichrome "ProSavage" chips)  The driver has been tested on an IX-MV Mobile