@@ -99,13 +99,14 @@ public:
 	virtual void Quit( int nAction );
 	virtual void HandleMessage( os::Message* pcMessage );
 	virtual bool OkToQuit();
-	virtual void LoadSettings();
-	virtual void SaveSettings();
-	virtual void AddPlugin( os::String zPath );
-	virtual void UpdatePlugins();
-	virtual void DeletePlugin( os::DockPlugin* pcPlugin );
-	virtual void ActivateWindow( int32 nWindow );
-	virtual void UpdateWindows( os::Message* pcWindows, int32 nCount );
+	void LoadSettings();
+	void SaveSettings();
+	void AddPlugin( os::String zPath );
+	void UpdatePlugins();
+	void DeletePlugin( os::DockPlugin* pcPlugin );
+	void ActivateWindow( int32 nWindow );
+	void UpdateWindows( os::Message* pcWindows, int32 nCount );
+	void UpdateWindowArea();
 	virtual void WindowsChanged();
 	virtual void ScreenModeChanged( const os::IPoint& cNewRes, os::color_space eSpace );
 	virtual void DesktopActivated( int nDesktop, bool bActive );
