@@ -83,6 +83,13 @@ void TopLayer::LayerFrameChanged( Layer* pcChild, IRect cFrame )
 			IRect cBlitRect = IRect( 0, 0, pcOldBuffer->m_nWidth - 1, pcOldBuffer->m_nHeight - 1 )
 						& IRect( 0, 0, pcBackbuffer->m_nWidth - 1, pcBackbuffer->m_nHeight - 1 );
 			pcBackbuffer->m_pcDriver->BltBitmap( pcBackbuffer, pcOldBuffer, cBlitRect, IRect( IPoint( 0, 0 ), cBlitRect.Size() ), DM_COPY, 0xff );
+			/* Fill new areas with the default color */
+			if( pcBackbuffer->m_nWidth > pcOldBuffer->m_nWidth )
+				pcBackbuffer->m_pcDriver->FillRect( pcBackbuffer, os::IRect( pcOldBuffer->m_nWidth, 0, pcBackbuffer->m_nWidth - 1, pcBackbuffer->m_nHeight ),
+													os::get_default_color( COL_NORMAL ), DM_COPY );
+			if( pcBackbuffer->m_nHeight > pcOldBuffer->m_nHeight )
+				pcBackbuffer->m_pcDriver->FillRect( pcBackbuffer, os::IRect( 0, pcOldBuffer->m_nHeight, pcBackbuffer->m_nWidth - 1, pcBackbuffer->m_nHeight ),
+													os::get_default_color( COL_NORMAL ), DM_COPY );													
 		}
 		pcOldBuffer->Release();
 		//dbprintf( "Released old backbuffer\n" );
